--- a/apps/webclient/static/scss/app.scss
+++ b/apps/webclient/static/scss/app.scss
@@ -1,2 +1,5 @@
 @import "settings";
 @import "foundation";
+@import "foundation_overrides";
+@import "base";
+@import "debug";  // This must come last to override any previous styling.
