--- a/apps/webclient/templates/webclient/base.html
+++ b/apps/webclient/templates/webclient/base.html
@@ -22,7 +22,7 @@
     {% block backbonetemplates %}{% endblock %}
 
     <header id="site-header">
-
+        {% include "webclient/_header.html" %}
     </header>
 
     <div class="wrapper">
