--- a/apps/webclient/templates/webclient/index.html
+++ b/apps/webclient/templates/webclient/index.html
@@ -1,6 +1,10 @@
 {% extends "webclient/base.html" %}
 
 {% block content %}
-<h1>Hurra</h1>
+<div class="row">
+    <div class="large-4">
+        <h1>hurra</h1>
+    </div>
+</div>
 
 {% endblock %}
