--- a/apps/webclient/templates/webclient/_header.html
+++ b/apps/webclient/templates/webclient/_header.html
@@ -1,6 +1,3 @@
-{% load staticfiles %}
+{% load sitetree %}
 
-<div class="row">
-    <span id="logo-container"></span>
-
-</div>
+{% sitetree_menu from "webclient_top_bar_nav_menu" include "trunk, topmenu" template "webclient/sitetree/topbar_navmenu/navmenu.html" %}
