--- a/apps/webclient/static/scss/_foundation_overrides.scss
+++ b/apps/webclient/static/scss/_foundation_overrides.scss
@@ -14,18 +14,22 @@ $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  * Top bar navigation menu overrides
  */
 
-$topbar-bg: transparent;
+//$topbar-bg: transparent;
+//$topbar-height: 80px;
+//$topbar-margin-bottom: rem-calc(30);
 
 /* Set the link colors and styles for top-level nav */
-$topbar-link-color: $primary-color;
+//$topbar-link-color: $primary-color;
 //$topbar-link-color-hover: $primary-color;
 //$topbar-link-color-active: $primary-color;
 
+$topbar-menu-icon-color: $primary-color;
+$topbar-menu-icon-color-toggled: #888;
 
 /* Style the top bar dropdown elements */
-$topbar-dropdown-bg: transparent;
-$topbar-dropdown-link-color: #fff;
-$topbar-dropdown-link-bg: #333;
-$topbar-dropdown-toggle-size: 5px;
-$topbar-dropdown-toggle-color: #fff;
-$topbar-dropdown-toggle-alpha: 0.5;
+//$topbar-dropdown-bg: transparent;
+//$topbar-dropdown-link-color: #fff;
+//$topbar-dropdown-link-bg: #333;
+//$topbar-dropdown-toggle-size: 5px;
+//$topbar-dropdown-toggle-color: #fff;
+//$topbar-dropdown-toggle-alpha: 0.5;
