--- a/apps/webclient/static/scss/app.scss
+++ b/apps/webclient/static/scss/app.scss
@@ -1,5 +1,6 @@
 @import "settings";
 @import "foundation_overrides";
 @import "foundation";
+@import "sketchy";
 @import "base";
 @import "debug";  // This must come last to override any previous styling.
