--- a/apps/webclient/templates/webclient/index.html
+++ b/apps/webclient/templates/webclient/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="row">
     <div class="large-4">
-        <ul class="square">
+        <ul class="square sketchy">
             <li><a href="/#/posts/12">12</a></li>
             <li><a href="/#/posts/13">13</a></li>
             <li><a href="/#/posts/14">14</a></li>
