--- a/apps/webclient/templates/webclient/index.html
+++ b/apps/webclient/templates/webclient/index.html
@@ -2,13 +2,14 @@
 
 {% block content %}
 <div class="row">
-    <div class="large-4">
-        <ul class="square sketchy">
-            <li><a href="/#/posts/12">12</a></li>
-            <li><a href="/#/posts/13">13</a></li>
-            <li><a href="/#/posts/14">14</a></li>
+    <div class="large-12">
+        <ul class="inline-list">
+            <li><a href="/#/sketchy">Sketchy UI Demo</a></li>
+            <li><a href="/#/card-api">Card API example</a></li>
         </ul>
     </div>
 </div>
+
+
 
 {% endblock %}
