--- a/apps/webclient/static/js/backbone_app/templates/cards/api-example.html
+++ b/apps/webclient/static/js/backbone_app/templates/cards/api-example.html
@@ -1,5 +1,9 @@
 <div class="row">
     <div class="large-12">
         <h3 class="right">Card API Example</h3>
+
+        <p>
+            Check your javascript console for output!
+        </p>
     </div>
 </div>
