--- a/apps/webclient/static/scss/_base.scss
+++ b/apps/webclient/static/scss/_base.scss
@@ -16,4 +16,14 @@ html, body {
     margin-top: rem-calc(40);
   }
 
+  div.spinner32 {
+    background: url(/static/img/spinner32.gif) no-repeat center top;
+    min-height: rem-calc(64);
+  }
+
+  div.spinner64 {
+    background: url(/static/img/spinner64.gif) no-repeat center top;
+    min-height: rem-calc(128);
+  }
+
 }
