--- a/apps/webclient/templates/webclient/index.html
+++ b/apps/webclient/templates/webclient/index.html
@@ -1,15 +1,7 @@
 {% extends "webclient/base.html" %}
 
 {% block content %}
-<div class="row">
-    <div class="large-12">
-        <ul class="inline-list">
-            <li><a href="/#/sketchy">Sketchy UI Demo</a></li>
-            <li><a href="/#/card-api">Card API example</a></li>
-        </ul>
-    </div>
+<div id="bb-content">
+    {# Backbone templates will render it's content here! #}
 </div>
-
-
-
 {% endblock %}
