--- a/apps/webapp/templates/index.html
+++ b/apps/webapp/templates/index.html
@@ -8,8 +8,8 @@
 
         <title>Stickfight!</title>
 
-        <link rel="stylesheet" href="{% static "css/app.css" %}"/>
-        <script src="{% static "components/modernizr/modernizr.js" %}"></script>
+        <link rel="stylesheet" href="{% static "webapp/css/app.css" %}"/>
+        <script src="{% static "webapp/components/modernizr/modernizr.js" %}"></script>
     </head>
     <body>
         <header id="site-header">
@@ -24,6 +24,6 @@
 
         </footer>
 
-    <script data-main="app/main.js" src="{% static "components/requirejs/require.js" %}"></script>
+    <script data-main="app/main.js" src="{% static "webapp/components/requirejs/require.js" %}"></script>
     </body>
 </html>
