--- a/apps/webapp/templates/index.html
+++ b/apps/webapp/templates/index.html
@@ -8,8 +8,8 @@
 
         <title>Stickfight!</title>
 
-        <link rel="stylesheet" href="{% static "webapp/css/app.css" %}"/>
-        <script src="{% static "webapp/bower_components/modernizr/modernizr.js" %}"></script>
+        <link rel="stylesheet" href="{% static "webapp/static/css/app.css" %}"/>
+        <script src="{% static "webapp/static/js/modernizr.js" %}"></script>
     </head>
     <body>
         <header id="site-header">
@@ -24,6 +24,6 @@
 
         </footer>
 
-    <script data-main="{% static "webapp/app/main.js" %}" src="{% static "webapp/bower_components/requirejs/require.js" %}"></script>
+    <script data-main="{% static "webapp/main.js" %}" src="{% static "webapp/static/js/require.js" %}"></script>
     </body>
 </html>
