yey! handlebar works
Signed-off-by: Rolf Håvard Blindheim <rolf@moota.com>

--- a/apps/webapp/staging/scss/_base.scss
+++ b/apps/webapp/staging/scss/_base.scss
@@ -17,12 +17,12 @@ html, body {
   }
 
   div.spinner32 {
-    background: url(../img/spinner32.gif) no-repeat center top;
+    background: url(../images/spinner32.gif) no-repeat center top;
     min-height: rem-calc(64);
   }
 
   div.spinner64 {
-    background: url(../img/spinner64.gif) no-repeat center top;
+    background: url(../images/spinner64.gif) no-repeat center top;
     min-height: rem-calc(128);
   }
 
