--- a/apps/webapp/templates/index.html
+++ b/apps/webapp/templates/index.html
@@ -12,12 +12,11 @@
         <script src="{% static "webapp/static/js/modernizr.js" %}"></script>
     </head>
     <body>
-        <header id="site-header">
+        <header id="site-header"></header>
 
-        </header>
-
-        <div id="content">
-
+        <div id="wrapper">
+            <div id="content"></div>
+            <div class="push"></div>
         </div>
 
         <footer id="site-footer">
