--- a/apps/webapp/staging/scss/_foundation_overrides.scss
+++ b/apps/webapp/staging/scss/_foundation_overrides.scss
@@ -14,12 +14,12 @@ $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
  * Top bar navigation menu overrides
  */
 
-//$topbar-bg: transparent;
+$topbar-bg: url(../images/backgrounds/farmer.png);
 //$topbar-height: 80px;
 //$topbar-margin-bottom: rem-calc(30);
 
 /* Set the link colors and styles for top-level nav */
-//$topbar-link-color: $primary-color;
+$topbar-link-color: $primary-color;
 //$topbar-link-color-hover: $primary-color;
 //$topbar-link-color-active: $primary-color;
 
