--- a/apps/webapp/templates/index.html
+++ b/apps/webapp/templates/index.html
@@ -17,7 +17,7 @@
         </header>
 
         <div id="wrapper">
-            <div id="content"></div>
+            {% verbatim %}<div id="content"></div>{% endverbatim %}
             <div class="push"></div>
         </div>
 
