--- a/apps/webapp/static/webapp/templates/staff-stuff/card-database-layout.hbs
+++ b/apps/webapp/static/webapp/templates/staff-stuff/card-database-layout.hbs
@@ -1,5 +1,5 @@
 <section>
-    <h1>Test template!</h1>
+    <h1>Card database</h1>
     <section id="menu"></section>
     <section id="preview"></section>
 </section>
